<resources>
    <string name="app_name">Cloud Vision</string>
    <string name="title_activity_faces">Crowd</string>
    <string name="action_camera">Take a photo</string>
    <string name="action_gallery">Select a picture</string>
    <string name="action_settings">Settings</string>
    <string name="everyone">Everyone</string>
    <string name="winners">Winners</string>
    <string name="exception_all_raffles_been_made">All raffles have already been made.</string>
    <string name="exception_not_valid_picture">Sorry, this picture is not valid.</string>
    <string name="exception_current_process_not_finished">Please wait until the current process is finished.</string>
</resources>
