<?xml version="1.0" encoding="utf-8"?>
<br.com.brolam.cloudvision.views.FaceItemView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/faceItemView"
    android:layout_width="60dp"
    android:layout_height="60dp"
    tools:faceDrawable="@drawable/ic_face_black_60dp"/>